--- a/workHours/web/app/scripts/report/report-graph.html
+++ b/workHours/web/app/scripts/report/report-graph.html
@@ -1,1 +1,1 @@
- <div class="col-xs-12 col-md-4 border hidden-print"> 	<div id="pieChartDiv" class="ct-chart"> 	 	</div> </div>
+ <div class="col-xs-12 col-md-4 hidden-print" ng-show="graphCtrl.loggedin"> 	<div class="ct-chart-time pieChartDiv"> 	</div> 	 	 <div class="ct-chart-price pieChartDiv"> 	 	</div> </div>
