--- a/workHours/web/aurelia/src/app.html
+++ b/workHours/web/aurelia/src/app.html
@@ -2,8 +2,8 @@
   <require from="materialize-css/css/materialize.css"></require>
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo waves-effect waves-light">&nbsp;${router.title} - Welcome ${auth.user.fullName}</a>
-      <a href="#" data-activates="mobile-demo" class="button-collapse" materialize="sidenav"><i class="mdi-navigation-menu"></i></a>
+      <a href="#" class="brand-logo waves-effect waves-light">&nbsp;${router.title}</a>
+      <a md-sidenav-collapse="ref.bind: sideNav;" class="right hide-on-large-only " style="cursor: pointer; padding: 0 10px;" data-activates="md-sidenav-0"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li repeat.for="route of router.navigation" class="${route.isActive ? 'active' : ''}">
           <a href.bind="route.href" class="waves-effect waves-light">${route.title}</a>
@@ -14,6 +14,13 @@
           <a href.bind="route.href" class="waves-effect waves-light">${route.title}</a>
         </li>
       </ul>
+      <md-sidenav view-model.ref="sideNav" md-edge="right" md-close-on-click="true">
+        <ul class="">
+          <li repeat.for="route of router.navigation" class="${route.isActive ? 'active' : ''}">
+            <a href.bind="route.href" class="waves-effect waves-light">${route.title}</a>
+          </li>
+        </ul>
+      </md-sidenav>
     </div>
   </nav>
 
