--- a/workHours/web/aurelia/src/worktime/grid.html
+++ b/workHours/web/aurelia/src/worktime/grid.html
@@ -1,7 +1,7 @@
 <template><!-- Display a list of the worktime -->
 	<div class="m-t-20">
 		<div class="">
-	  	<button type='button' title="Add a Work Time" ng-click="gridCtrl.addWorkTime()" class="btn btn-primary no-print">ADD</button>
+	  	<button type='button' md-waves title="Add a Work Time" click.delegate="addWorkTime()" class="btn btn-primary no-print">ADD</button>
 			<h4>Temps de travail de ${userName} pour ${clientName}<span ng-show="gridCtrl.showDates"> du ${from | dateFormat : 'DD.MM.YYYY'} au ${to | dateFormat : 'DD.MM.YYYY'}</span></h4>
 			<span>test : ${worktimes._count}- ${worktimes._pageSize}- ${worktimes._sent}</span>
 	  </div>
