(NEW VERSION) This is a major release for workTime. It use the aurelia framework and for now we can log in and enter work time for the current logged user.

--- a/workHours/web/aurelia/index.html
+++ b/workHours/web/aurelia/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <!-- <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css"> -->
-      <link rel="stylesheet" href="styles/custom.css">
-      <link rel="stylesheet" href="styles/responsive-table.css">
+      <link rel="stylesheet" href="src/styles/custom.css">
+      <link rel="stylesheet" href="src/styles/responsive-table.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Aurelia</title>
   </head>
 
   <body aurelia-app="main">
     <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    <script type="text/javascript" src="http://127.0.0.1:8081/rpc-proxy/directoryComponent?namespace=directoryComponent"></script>
   </body>
 </html>
