--- a/workHours/web/aurelia/src/app.html
+++ b/workHours/web/aurelia/src/app.html
@@ -1,20 +1,24 @@
 <template>
   <require from="materialize-css/css/materialize.css"></require>
+  <div class="right-align" if.bind="auth.logged">
+    <a click.delegate="logout()" class="m-b-20 red-text clickable hoverrable">Logout</a>
+    <!-- <button class="m-b-20" md-button="flat:true">Logout</button> -->
+  </div>
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo waves-effect waves-light">&nbsp;${router.title}</a>
-      <a md-sidenav-collapse="ref.bind: sideNav;" class="right hide-on-large-only " style="cursor: pointer; padding: 0 10px;" data-activates="md-sidenav-0"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
+      <a href="#" class="right brand-logo waves-effect waves-light">&nbsp;${router.title}</a>
+      <a md-sidenav-collapse="ref.bind: sideNav;" class="left hide-on-large-only " style="cursor: pointer; padding: 0 10px;" data-activates="md-sidenav-0"><i class="material-icons">menu</i></a>
+      <ul class="left hide-on-med-and-down">
         <li repeat.for="route of router.navigation" class="${route.isActive ? 'active' : ''}">
           <a href.bind="route.href" class="waves-effect waves-light">${route.title}</a>
         </li>
       </ul>
-      <ul class="side-nav">
+      <!-- <ul class="side-nav">
         <li repeat.for="route of router.navigation" class="${route.isActive ? 'active' : ''}">
           <a href.bind="route.href" class="waves-effect waves-light">${route.title}</a>
         </li>
-      </ul>
-      <md-sidenav view-model.ref="sideNav" md-edge="right" md-close-on-click="true">
+      </ul> -->
+      <md-sidenav view-model.ref="sideNav" md-edge="left" md-close-on-click="true">
         <ul class="">
           <li repeat.for="route of router.navigation" class="${route.isActive ? 'active' : ''}">
             <a href.bind="route.href" class="waves-effect waves-light">${route.title}</a>
