--- a/workHours/web/aurelia/src/resources/elements/datePicker.html
+++ b/workHours/web/aurelia/src/resources/elements/datePicker.html
@@ -1,4 +1,4 @@
 <template>
-  <label for.bind="ID">${label}</label>
-  <input id.bind="ID" type="date" class="datepicker" value.bind="date | dateFormat: 'YYYY-MM-DD'" />
+  <label for.bind="dpid">${dplabel}</label>
+  <input id.bind="dpid" type="date" class="datepicker" value.bind="dpdate | dateFormat: 'YYYY-MM-DD'" />
 </template>
