--- a/workHours/web/aurelia/src/worktime/grid.html
+++ b/workHours/web/aurelia/src/worktime/grid.html
@@ -1,9 +1,8 @@
 <template><!-- Display a list of the worktime -->
 	<div class="m-t-20">
-		<div class="">
-	  	<button type='button' md-waves title="Add a Work Time" click.delegate="addWorkTime()" class="btn btn-primary no-print">ADD</button>
-			<h4>Temps de travail de ${userName} pour ${clientName}<span ng-show="gridCtrl.showDates"> du ${from | dateFormat : 'DD.MM.YYYY'} au ${to | dateFormat : 'DD.MM.YYYY'}</span></h4>
-			<span>test : ${worktimes._count}- ${worktimes._pageSize}- ${worktimes._sent}</span>
+		<div class="row">
+	  	<button type='button' md-waves title="Add a Work Time" click.delegate="addWorkTime()" class="btn-large btn-primary no-print right">ADD</button>
+			<!-- <h4>Temps de travail de ${userName} pour ${clientName}<span ng-show="gridCtrl.showDates"> du ${from | dateFormat : 'DD.MM.YYYY'} au ${to | dateFormat : 'DD.MM.YYYY'}</span></h4> -->
 	  </div>
 		<div class="">
 			<div class="table-responsive-vertical shadow-z-1">
@@ -13,37 +12,60 @@
 						<tr>
 							<th>Start</th>
 							<th>End</th>
-							<th class="truncateCstm">Duration</th>
-							<th class="comment" width="">Comment</th>
-							<th class="hide-on-med-and-down truncateCstm">Break</th>
-							<th class="hide-on-med-and-down truncateCstm">Reason</th>
-							<th class="hide-on-med-and-down truncateCstm">Client</th>
-							<th class="truncateCstm">Category</th>
-							<th class="truncateCstm">User</th>
+							<th>Duration</th>
+							<!-- <th class="comment" width="">Comment</th> -->
+							<th>Client</th>
+							<th>Category</th>
+							<th>User</th>
+							<th>Break</th>
+							<th>Reason</th>
+							<th>Train Time</th>
+							<th>Train Price</th>
 							<th class="no-print"></th>
 							<th class="no-print"></th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr class="clickable" repeat.for="worktime of worktimes.entities">
+					<tbody repeat.for="worktime of worktimes.entities">
+							<tr class="clickable">
+								<td data-title="Start">${worktime.start | dateFormat:'DD.MM.YY HH:mm'}</td>
+								<td data-title="End">${worktime.end | dateFormat:'DD.MM.YY HH:mm'}</td>
+								<td data-title="Duration">${worktime.timeWorked | millisToHours}</td>
+								<!-- <td data-title="Comment" class="w-b comment">${worktime.comment}</td> -->
+								<td data-title="Client">${worktime.clientName}</td>
+								<td data-title="Category">${worktime.categoryName}</td>
+								<td data-title="User">${worktime.userName}</td>
+								<td data-title="Break Time" class="">${worktime.breakTime}</td>
+								<td data-title="Reason">${worktime.breakReason | truncate:25}</td>
+								<td data-title="Train Time" class="">${worktime.trainTime}</td>
+								<td data-title="Train Price" class="">${worktime.trainPrice}</td>
+								<td data-title="" click.delegate="editTime(worktime.ID)" class="no-print center-align"><span title="Edit" class="material-icons ">edit</span></td>
+								<td data-title="" click.delegate="deleteTime(worktime.ID)" class="no-print center-align"><span title="Delete" class="material-icons">delete</span></td>
+							</tr>
+							<tr class="clickable">
+								<td class="hide-on-med-and-down"><b>Comment</b></td>
+								<td colspan="11" data-title="Comment" class="w-b comment">${worktime.comment}</td>
+							</tr>
+						<!-- <tr class="clickable" repeat.for="worktime of worktimes.entities">
 							<td data-title="Start">${worktime.start | dateFormat:'DD.MM.YY HH:mm'}</td>
 							<td data-title="End">${worktime.end | dateFormat:'DD.MM.YY HH:mm'}</td>
 							<td data-title="Duration">${worktime.timeWorked | millisToHours}</td>
 							<td data-title="Comment" class="w-b comment">${worktime.comment}</td>
-							<td data-title="Break" class="hide-on-med-and-down">${utils.millisToUTCDate(worktime.break) | dateFormat:'HH:mm'}</td>
-							<td data-title="Reason" class="hide-on-med-and-down truncateCstm">${worktime.breakReason | truncate:25}</td>
-							<td data-title="Client" class="hide-on-med-and-down truncateCstm">${worktime.clientName}</td>
+							<td data-title="Break" class="">${worktime.breakTime}</td>
+							<td data-title="Reason" class="truncateCstm">${worktime.breakReason | truncate:25}</td>
+							<td data-title="Break" class="">${worktime.trainTime}</td>
+							<td data-title="Break" class="">${worktime.trainPrice}</td>
+							<td data-title="Client" class="truncateCstm">${worktime.clientName}</td>
 							<td data-title="Category" class="truncatseCstm">${worktime.categoryName}</td>
 							<td data-title="User" class="truncateCstm">${worktime.userName}</td>
 							<td data-title="" click.delegate="editTime(worktime.ID)" class="no-print center-align"><span title="Edit" class="material-icons ">edit</span></td>
-							<td data-title="" class="no-print center-align"><span title="Delete" class="material-icons">delete</span></td>
-						</tr>
+							<td data-title="" click.delegate="deleteTime(worktime.ID)" class="no-print center-align"><span title="Delete" class="material-icons">delete</span></td>
+						</tr> -->
 					</tbody>
 				</table>
 			</div>
-			<button class="full-width waves-effect btn no-print" click.delegate="worktimes.more()" show.bind="worktimes._sent < worktimes._count"><span class="material-icons">add</span></button>
+			<!-- <button class="full-width waves-effect btn no-print" click.delegate="worktimes.more()" show.bind="worktimes._sent < worktimes._count"><span class="material-icons">add</span></button> -->
 
-			<md-pagination class="center-align" md-show-first-last="0" md-show-prev-next="0" md-on-page-changed.delegate="pageChanged($event)" md-pages.bind="worktimes._count / worktimes._pageSize" md-visible-page-links="6">
+			<md-pagination class="center-align" md-show-first-last="true" md-show-prev-next="true" md-on-page-changed.delegate="pageChanged($event)" md-pages.bind="paginationPages" md-visible-page-links="2">
 			</md-pagination>
 
 			<!-- <md-switch md-checked.bind="showFirstLast"></md-switch>
