(feature) addition of a color switcher in the app. make the button compatible

--- a/workHours/web/aurelia/src/home.html
+++ b/workHours/web/aurelia/src/home.html
@@ -1,4 +1,4 @@
 <template>
   <h2>Welcome ${auth.user.fullName}</h2>
-  <button md-button="large: true;" class="waves-effect" click.delegate="logout()">Logout</button>
+  <button class="primary" md-button="large: true;" class="waves-effect" click.delegate="logout()">Logout</button>
 </template>
