--- a/workHours/web/aurelia/src/worktime/w-form.html
+++ b/workHours/web/aurelia/src/worktime/w-form.html
@@ -1,5 +1,5 @@
 <template>
-  <a class="btn-floating btn-large waves-effect waves-light m-t-20" click.delegate="navigateBack()"><i class="material-icons">navigate_before</i></a>
+  <a md-button="large: true; floating: true" md-waves class="m-t-20 primary" click.delegate="navigateBack()"><i class="material-icons">navigate_before</i></a>
   <div class="container m-t-20">
     <form submit.delegate="save()">
       <div class="row">
@@ -7,7 +7,7 @@
           <h4 class="header">Edit</h4>
         </div>
         <div class="col s6 right-align">
-          <button type="submit" md-waves class="btn-floating"><i class="material-icons">save</i></button>
+          <button type="submit" md-button="large: true" md-waves class="accent"><i class="material-icons">save</i></button>
         </div>
       </div>
       <md-card md-title="Client">
