--- a/workHours/web/aurelia/src/app.html
+++ b/workHours/web/aurelia/src/app.html
@@ -1,10 +1,13 @@
 <template>
   <require from="materialize-css/css/materialize.css"></require>
+  <require from="./color-switcher.html"></require>
+  <md-colors md-primary-color.bind="primaryColor" md-accent-color.bind="accentColor" md-error-color.bind="errorColor"></md-colors>
+
   <div class="right-align" if.bind="auth.logged">
-    <a click.delegate="logout()" class="m-b-20 red-text clickable hoverrable">Logout</a>
+    <a md-button click.delegate="logout()" class="m-b-20 primary bold">Logout</a>
     <!-- <button class="m-b-20" md-button="flat:true">Logout</button> -->
   </div>
-  <nav>
+  <nav class="primary">
     <div class="nav-wrapper">
       <a href="#" class="right brand-logo waves-effect waves-light">&nbsp;${router.title}</a>
       <a md-sidenav-collapse="ref.bind: sideNav;" class="left hide-on-large-only " style="cursor: pointer; padding: 0 10px;" data-activates="md-sidenav-0"><i class="material-icons">menu</i></a>
@@ -28,6 +31,11 @@
     </div>
   </nav>
 
+  <div class="row">
+    <div class="col m12 l3">
+      <color-switcher primary-color.two-way="primaryColor" accent-color.two-way="accentColor" error-color.two-way="errorColor"></color-switcher>
+    </div>
+  </div>
 
   <div class="page-host">
     <router-view></router-view>
