--- a/workHours/web/aurelia/index.html
+++ b/workHours/web/aurelia/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=0.7" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css"> -->
       <link rel="stylesheet" href="src/styles/custom.css">
       <link rel="stylesheet" href="src/styles/responsive-table.css">
