--- a/workHours/web/aurelia/src/app.html
+++ b/workHours/web/aurelia/src/app.html
@@ -3,7 +3,7 @@
   <require from="./color-switcher.html"></require>
   <md-colors md-primary-color.bind="primaryColor" md-accent-color.bind="accentColor" md-error-color.bind="errorColor"></md-colors>
 
-  <div class="row">
+  <div class="row no-print">
     <div class="col l6">
       <color-switcher select.bind="true" primary-color.two-way="primaryColor" accent-color.two-way="accentColor" error-color.two-way="errorColor"></color-switcher>
     </div>
@@ -14,7 +14,7 @@
   </div>
 
 
-  <nav class="primary">
+  <nav class="primary z-depth-4 no-print">
     <div class="nav-wrapper">
       <a href="#" md-waves class="right brand-logo waves-effect waves-light">&nbsp;${router.title}</a>
       <a md-sidenav-collapse="ref.bind: sideNav;" class="left hide-on-large-only " style="cursor: pointer; padding: 0 10px;" data-activates="md-sidenav-0"><i class="material-icons">menu</i></a>
