--- a/workHours/web/aurelia/src/report/report.html
+++ b/workHours/web/aurelia/src/report/report.html
@@ -3,7 +3,7 @@
 
   <h5 class="center-align">${message}</h5>
 
-  <div class="table-responsive-vertical shadow-z-1 print" show.bind="reportData.length > 0">
+  <div class="table-responsive-vertical shadow-z-1" show.bind="reportData.length > 0">
     <table id="table" class="table table-hover table-mc-light-blue">
       <thead>
         <tr>
