--- a/workHours/web/aurelia/src/worktime/grid.html
+++ b/workHours/web/aurelia/src/worktime/grid.html
@@ -5,7 +5,7 @@
 			<!-- <h4>Temps de travail de ${userName} pour ${clientName}<span ng-show="gridCtrl.showDates"> du ${from | dateFormat : 'DD.MM.YYYY'} au ${to | dateFormat : 'DD.MM.YYYY'}</span></h4> -->
 	  </div>
 		<div class="">
-			<div class="table-responsive-vertical shadow-z-1">
+			<div class="table-responsive-vertical z-depth-4">
   <!-- Table starts here -->
   			<table id="table" class="table table-hover table-mc-light-blue">
 					<thead>
