--- a/workHours/web/index.html
+++ b/workHours/web/index.html
@@ -1,8 +1,1 @@
-<html>
-    <head>
-        <meta http-equiv="cache-control" content="no-cache">
-        <meta http-equiv="refresh" content="0; url=app/index.html" />
-    </head>
-    <body>
-    </body>
-</html>
+<html>    <head>        <meta http-equiv="cache-control" content="no-cache">        <meta http-equiv="refresh" content="0; url=aurelia/" />    </head>    <body>    </body></html>
