--- a/workHours/web/index.html
+++ b/workHours/web/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="src/styles/custom.css">
     <link rel="stylesheet" href="src/styles/responsive-table.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png" />
     <title>Work Time</title>
   </head>
 
