(modif) require the css via code and not via header link. This way I can use only the bundling file and not the raw files. Useful for prod

--- a/workHours/web/src/app.html
+++ b/workHours/web/src/app.html
@@ -1,5 +1,7 @@
 <template>
   <require from="materialize-css/css/materialize.css"></require>
+  <require from="./styles/custom.css"></require>
+  <require from="./styles/responsive-table.css"></require>
   <require from="./color-switcher.html"></require>
   <md-colors md-primary-color.bind="primaryColor" md-accent-color.bind="accentColor" md-error-color.bind="errorColor"></md-colors>
 
