(feature) Add a method for work time to get only the time for the current logged user. This is useful for a dataAdmin when he want to filter his data on the front end. Adapt the code on the front-end.

--- a/workHours/web/src/worktime/grid.html
+++ b/workHours/web/src/worktime/grid.html
@@ -23,7 +23,7 @@
 							<th class="no-print"></th>
 						</tr>
 					</thead>
-					<tbody repeat.for="worktime of worktimes.entities">
+					<tbody repeat.for="worktime of worktimes">
 							<tr class="clickable">
 								<td data-title="Start">${worktime.start | dateFormat:'DD.MM.YY HH:mm'}</td>
 								<td data-title="End">${worktime.end | dateFormat:'DD.MM.YY HH:mm'}</td>
