--- a/workHours/web/index.html
+++ b/workHours/web/index.html
@@ -9,6 +9,6 @@
   </head>
 
   <body aurelia-app="main">
-    <script src="scripts/vendor-bundle-dcc06fe5c7.js" data-main="aurelia-bootstrapper"></script>
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
   </body>
 </html>
