Change the event in filter to apply-filter. Add filter in the work time grid.

--- a/workHours/web/src/report/report.html
+++ b/workHours/web/src/report/report.html
@@ -1,5 +1,5 @@
 <template>
-  <filter apply.delegate="apply($event)" f-from.bind="from" f-to.bind="to" f-user-id.bind="userID" f-client-name.bind="clientName" class="no-print"></filter>
+  <filter apply-filter.delegate="applyFilter($event)" f-from.bind="from" f-to.bind="to" f-user-id.bind="userID" f-client-name.bind="clientName" class="no-print"></filter>
 
   <h5 class="center-align">${message}</h5>
 
