--- a/workHours/web/src/home.html
+++ b/workHours/web/src/home.html
@@ -1,4 +1,4 @@
 <template>
   <h2>Welcome ${auth.user.fullName}</h2>
-  <button class="primary" md-button="large: true;" class="waves-effect" click.delegate="logout()">Logout</button>
+  <button class="primary waves-effect" md-button="large: true;" click.delegate="logout()">Logout</button>
 </template>
