--- a/workHours/web/src/worktime/grid.html
+++ b/workHours/web/src/worktime/grid.html
@@ -5,7 +5,7 @@
 	  </div>
 		<ul md-collapsible class="no-print">
 			<li>
-				<div md-waves id="filterHeader" class="collapsible-header accent"><i class="material-icons">print</i>Print Options</div>
+				<div md-waves id="printOptionsHeader" class="collapsible-header accent"><i class="material-icons">print</i>Print Options</div>
 				<div class="collapsible-body">
 					<div class="row">
 						<div class="col s4">
@@ -76,7 +76,7 @@
 							</tr>
 							<tr class="clickable">
 								<td class="hide-on-med-and-down no-print"><b>Comment</b></td>
-								<td colspan="9" data-title="Comment" class="w-b comment">&nbsp;${worktime.comment} dsadsa hbjdsah jdsahjsdahj dsahj dsahj dsahj sadhj dsahj sdahjdsahj dsahjadshj adhjdashjdashj dasdajdsadsdda djahjdash </td>
+								<td colspan="9" data-title="Comment" class="w-b comment">&nbsp;${worktime.comment}</td>
 							</tr>
 					</tbody>
 				</table>
