Fix issue of reporting that can have NaN value; Fix issue of removing a break or train; Fix issue when navigating without a filter; Resize a bit the texture and add a scroll if there is much text.

--- a/workHours/web/src/worktime/w-form.html
+++ b/workHours/web/src/worktime/w-form.html
@@ -58,7 +58,7 @@
       <md-card md-title="Informations">
         <div class="row">
           <div class="col s12">
-            <md-input md-label="Comment" md-value.bind="comment & validate" validate="comment" md-text-area="true"></md-input>
+            <md-input md-label="Comment" md-value.bind="comment & validate" validate="comment" md-text-area="true" class="scroll-h"></md-input>
           </div>
         </div>
         <div class="row">
