Restore state of work time grid and report pages. use localStorage

--- a/workHours/web/src/worktime/grid.html
+++ b/workHours/web/src/worktime/grid.html
@@ -84,7 +84,7 @@
 			<div class="row no-print">
 				<div class="col s12 center-align">
 					<div class="input-field inline">
-						<md-pagination hide.bind="all" class="center-align" md-show-first-last="true" md-show-prev-next="true" md-on-page-changed.delegate="pageChanged($event)" md-pages.bind="paginationPages" md-visible-page-links="5"></md-pagination>
+						<md-pagination hide.bind="all" class="center-align" md-show-first-last="true" md-show-prev-next="true" md-on-page-changed.delegate="pageChanged($event)" md-pages.bind="paginationPages" md-active-page.bind="activePage" md-visible-page-links="5"></md-pagination>
 					</div>
 
 					<div class="input-field inline">
