--- a/workHours/web/src/color-switcher.html
+++ b/workHours/web/src/color-switcher.html
@@ -1,4 +1,4 @@
-<template bindable="select, primaryColor, accentColor, errorColor">
+<template>
   <div class="" if.bind="select">
     <div class="col l4">
       <select md-select="label: Primary Color" value.two-way="primaryColor">
