fix the csv report. add a textarea where the csv report will be displayed so we can copy/past in a csv file

--- a/workHours/web/src/report/report.html
+++ b/workHours/web/src/report/report.html
@@ -24,5 +24,6 @@
           </tr>
       </tbody>
     </table>
+    <md-input md-label="Rapport au format CSV" md-value.bind="csvText" md-text-area="true"></md-input>
   </div>
 </template>
